# synthora

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh.md  config.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
prompts/backup_v3.0/: judge_deep.md  judge_research.md  llm_judge.py  metadata_extractor.md  metadata_extractor.py  orchestrator.py
prompts/en-US/: answer_critic.md  auto_critique.md  contributor.md  contributor_deep.md  contributor_deep_claude_opus_thinking.md  contributor_deep_claude_sonnet.md  contributor_deep_deepseek_reasoner.md  contributor_deep_gemini_31_pro_thinking.md  contributor_deep_gemini_3_flash.md  contributor_deep_gemini_3_pro.md  contributor_deep_gpt52_all.md  contributor_deep_gpt52_pro.md  contributor_deep_gpt52_thinking.md  contributor_deep_gpt53_codex.md  contributor_deep_kimi.md  contributor_deep_perplexity_sonar_pro.md  contributor_light.md  contributor_research_claude_opus_thinking.md  contributor_research_claude_sonnet_thinking.md  contributor_research_deepseek_reasoner.md  contributor_research_gemini_31_pro_thinking.md  contributor_research_gpt52_pro.md  contributor_research_gpt52_thinking.md  contributor_research_gpt53_codex.md  contributor_research_kimi.md  contributor_research_perplexity_sonar_pro.md  judge_adaptive_controversial.md  judge_adaptive_creative.md  judge_adaptive_factual.md  judge_deep.md  judge_light.md  judge_research.md  metadata_extractor.md  moa_refine.md  question_critic.md  safety_rules.md  terminology_map.md
prompts/zh-CN/: answer_critic.md  auto_critique.md  contributor.md  contributor_deep.md  judge_deep.md  (+29 more)
scripts/: analyze_best_model_per_category.py  analyze_category_performance.py  analyze_monitor.py  analyze_old_data.py  audit_gate_decisions.py  benchmark_quality.py  blind_evaluation.py  build_audit_anchor.py  diagnose_question.py  evaluation_protocol.py  export_openapi.py  generate-types.sh  l1_validation.py  regression_check.py  test_connectivity.py  test_model_perf.py  test_questions.json  test_questions_v2.json  test_single_query.py  trend_analysis.py
tests/: e2e_test_suite.py  test_adaptive_aggregation.py  test_api.py  test_ask_billing_semantics.py  test_cognitive_tracker.py  test_config_cost.py  test_health_gate.py  test_middleware.py  test_questions_real_user.md  test_roundtable_billing.py  test_socratic.py  test_socratic_integration.py  test_socratic_session_store.py  test_today_fixes.py  test_upload_cleanup.py
web/: .cloudflare-pages  .env.example  .gitignore  _redirects  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  visible-surface.html  vite.config.ts
(+206 files in other folders)
